<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="450dp"
        android:layout_height="947dp"
        android:contentDescription="@string/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <EditText
        android:id="@+id/name"
        android:layout_width="@dimen/box_width"
        android:layout_height="@dimen/box_height"
        android:layout_marginTop="@dimen/top_box_space"
        android:ems="10"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/punchLine" />

    <EditText
        android:id="@+id/surname"
        android:layout_width="@dimen/box_width"
        android:layout_height="@dimen/box_height"
        android:layout_marginTop="@dimen/between_box_space"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/birthplace"
        android:layout_width="@dimen/box_width"
        android:layout_height="@dimen/box_height"
        android:layout_marginTop="@dimen/between_box_space"
        android:hint="@string/birthplace"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surname"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/birthplace2"
        android:layout_width="@dimen/box_width"
        android:layout_height="@dimen/box_height"
        android:layout_marginTop="@dimen/between_box_space"
        android:ems="10"
        android:hint="@string/birthplace_sigla"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthplace" />

    <RadioGroup
        android:id="@+id/genderRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/between_box_space"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthplace2">

        <RadioButton
            android:id="@+id/maleRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender_M" />

        <RadioButton
            android:id="@+id/femaleRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender_F" />
    </RadioGroup>

    <DatePicker
        android:id="@+id/birthday"
        android:layout_width="@dimen/box_width"
        android:layout_height="151dp"
        android:layout_marginTop="@dimen/between_box_space"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderRadio" />

    <TextView
        android:id="@+id/fiscalCode"
        android:layout_width="@dimen/box_width"
        android:layout_height="67dp"
        android:layout_marginBottom="@dimen/top_box_space"
        android:fontFamily="sans-serif-black"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="@dimen/CF_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/punchLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/title_top_space"
        android:text="@string/top_app_name"
        android:fontFamily="sans-serif-black"
        android:textSize="@dimen/Title_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>